# cpp-static-dynamic-linking

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  build-libs.sh  main.cpp  run-g++-both-force-static.sh  run-g++-dynamic.sh  run-g++-mix.sh  run-g++-static.sh  simplecalc.cpp  simplecalc.hpp  simplestr.cpp  simplestr.hpp
boost_log/: CMakeLists.txt  README.md  build.sh  depends.sh  main.cpp  undefined-symbols-types.sh  undefined-symbols-types.txt  undefined-symbols.txt
boost_log/nm-parser/: README.md  setup.cfg
boost_log/nm-parser/src/nm_parser/: nm_parser.py
library-order-in-static-linking/: README.md
library-order-in-static-linking/demo/: README.md  linker-demo.cpp  run-linker-demo.sh  run-simple-examples.sh  simple-examples.cpp
library-order-in-static-linking/demo/linker/: exceptions.cpp  exceptions.hpp  linker.cpp  linker.hpp  object_file.cpp  object_file.hpp  processing.cpp  processing.hpp  static_lib.cpp  static_lib.hpp  symbol.cpp  symbol.hpp
library-order-in-static-linking/static-lib-rescanning/: A_func1.c  A_func1.h  A_func2.c  A_func2.h  A_subfunc1.c  A_subfunc1.h  A_subfunc2.c  A_subfunc2.h  A_subfunc3.c  A_subfunc3.h  A_subsubfunc1.c  A_subsubfunc1.h  B.c  B.h  README.md  build-and-run.sh  main.c
