# Refs:
# 1). https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# 2). https://github.com/pypa/build/blob/master/setup.cfg

[metadata]
name = nm-parser
version = 0.0.1
description = Parses the output of the program `nm`.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yaobinwen/cpp-static-dynamic-linking
author = Yaobin "Robin" Wen
author_email = robin.wyb@gmail.com

[options]
package_dir =
    =src
packages = find:
py_modules =
    nm_parser

[options.entry_points]
console_scripts =
    nm-parser = nm_parser:nm_parser.entry_point

[options.packages.find]
where = src
